[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ships/Player/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://assets/rocket.png" type="Texture" id=2]
[ext_resource path="res://Ships/Player/States/Travel.gd" type="Script" id=3]
[ext_resource path="res://Libraries/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Ships/Player/Move.gd" type="Script" id=5]
[ext_resource path="res://Ships/Inertial_System.tscn" type="PackedScene" id=6]

[node name="PlayerShip" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Inertial_System" parent="." instance=ExtResource( 6 )]

[node name="Spaceship" type="Sprite" parent="."]
position = Vector2( -0.0599976, -2.69202 )
texture = ExtResource( 2 )

[node name="ShipArea" type="Area2D" parent="."]
position = Vector2( -508.8, -297.6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipArea"]
polygon = PoolVector2Array( 496, 320, 520, 320, 512, 272, 504, 272 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Move/Travel")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Travel" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="CameraTransform" type="RemoteTransform2D" parent="."]
